# FluxReader

./: .gitignore  FluxReaderTemplate.C
Demo/: Demo0_FluxReader.C  Demo5_Advanced.C
FluxReader/: CMakeLists.txt  FluxReaderTemplate.C  SetupFluxReader.sh  load_flxrd.C
FluxReader/Demo/: Demo0_FluxReader.C  Demo1_Parameters.C  Demo2_VarWeight.C  Demo3_Spectra.C  Demo4_Combiner.C  Demo5_Advanced.C
FluxReader/include/: Detector.h  Detectors.h  FluxReader.h  Parameters.h  ParticleParam.h  Spectra.h  Spectra2D.h  Spectra3D.h  Utilities.h  Vars.h  Weight.h  Weights.h  XSec.h
FluxReader/src/: Combiner.cxx  Detector.cxx  FluxReader.cxx  Parameters.cxx  ParticleParam.cxx  Spectra.cxx  Spectra1D.cxx  Spectra2D.cxx  Spectra3D.cxx  SpectraCorrDet.cxx  Utilities.cxx  Var.cxx  Vars.cxx  Weight.cxx  Weights.cxx  XSec.cxx
include/: Combiner.h  Detectors.h  FluxReader.h  Spectra.h  Spectra1D.h  SpectraCorrDet.h  Var.h
src/: Combiner.cxx  Detector.cxx  Detectors.cxx  FluxReader.cxx  Parameters.cxx  ParticleParam.cxx  Spectra.cxx  Spectra1D.cxx  Spectra2D.cxx  SpectraCorrDet.cxx  Utilities.cxx  XSec.cxx
